--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.2",
+    "mysql2": "^3.12.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
   }
